# apriori-algorithm

./: .gitignore  README.md  pyproject.toml
src/apriori_algorithm/: __init__.py  main.py
tests/: test_apriori.py
